<resources>
    <string name="app_name">Gasool - Completo</string>
    <string name="title">Digite o valor do álcool e da gasolina em seus respectivos campos.</string>
    <string name="titleActivity2">Digite o consumo atual do seu carro</string>
    <string name="oil">Gasolina</string>
    <string name="alcohol">Álcool</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="symbol">R$</string>
    <string name="oil_expenditure_km">Gasolina/km</string>
    <string name="alcohol_expenditure_km">Álcool/km</string>
    <string name="title_activity_expenditure">Insira o cosumo do seu carro</string>
    <string name="result_button_expenditure">Exibir Resultado</string>
    <string name="campo_branco">Campo em Branco!</string>
    <string name="bestAlcohol">Álcool é melhor</string>
    <string name="bestOil">Gasolina é melhor</string>
    <string name="emptyFiel">Campo em Branco</string>
    <string name="consumo">Consumo</string>

</resources>